# uxon

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: _checks.yml  ci.yml  release.yml
backlog/: 2026-05-29-tui-primary-workspace-from-inside-worktree.md
config/: config.example.toml
demo/: README.md  render.py  uxon-demo
demo/scenarios/: solo-1.yaml  solo-n.yaml  team-1.yaml  team-n.yaml
docs/: architecture.md  audit-events.md  cli.md  clients.md  configuration.md  deployment.md  getting-started.md  index.md  migrations.md  privacy.md
docs/explain/: architecture.md  audit-channel-design.md  isolation-model.md  multi-host-philosophy.md  sizing-a-host.md  supervision-without-impersonation.md  worktrees.md
docs/guides/customise/: configure-github-on-new-project.md  customise-dashboard.md  migrate-session-prefix.md  override-ssh-per-peer.md  switch-default-agent.md  template-uxon-toml.md  tune-refresh-cadence.md  worktrees.md
docs/guides/debug/: diagnose-multi-host.md  enable-debug-logs.md  use-uxon-doctor.md
docs/guides/harden/: apply-resource-limits.md  configure-readonly-attach.md  enable-hidepid-correctly.md  lay-out-shared-projects.md
docs/guides/operate/: back-up-and-restore.md  forward-audit-to-collector.md  offboard-developer.md  onboard-developer.md  respond-to-rogue-agent.md  roll-fleet-upgrade.md  rotate-credentials.md  survive-aggregator-loss.md
docs/prototypes/: proto_css_vars.py  proto_datatable_hover.py  proto_exit_loop.py
docs/reference/: audit-events.md  cli.md  configuration.md  keybindings.md  wire-schema.md
docs/scenarios/: solo-1.md  solo-n.md  team-1.md  team-n.md
docs/start/: add-second-host.md  install.md  solo-1-quickstart.md  team-1-bootstrap.md
docs/superpowers/plans/: 2026-05-03-uxon-remote-attach.md  2026-05-05-audit-log-implementation.md  2026-05-07-session-dashboard-views.md  2026-05-29-worktree-support.md
docs/superpowers/specs/: 2026-05-03-uxon-remote-attach-design.md  2026-05-05-audit-log-design.md  2026-05-07-session-dashboard-views-design.md  2026-05-29-worktree-support-design.md
examples/: ccw-config.json  uxon-config.json
examples/sudoers/: audit.example
install/: install_ccw.py  install_uxon.py  render_ccw_config.py  render_uxon_config.py
lib/: ccw_agents.py  ccw_git_backend_gh.py  ccw_git_backend_token.py  ccw_git_create.py  ccw_git_profiles.py  ccw_settings.py  ccw_tui.py  ccw_tui_modals.py  ccw_tui_mouse.py  ccw_tui_settings.py  ccw_tui_widgets.py  uxon_agents.py  uxon_git_backend_gh.py  uxon_git_backend_token.py  uxon_git_create.py  uxon_git_profiles.py  uxon_settings.py
lib/ccw_tui/: __init__.py  _legacy.py  app.py  context.py  events.py  hints.py  launch.py  state.py  styles.tcss
lib/ccw_tui/screens/: __init__.py  agents_unavailable.py  confirm.py  existing.py  git_profile.py  launch_options.py  main.py  new_project.py  permissions.py  settings.py
lib/ccw_tui/widgets/: __init__.py  action_row.py  session_table.py
lib/uxon_tui/: __init__.py  app.py  context.py  hints.py  launch.py  state.py  styles.tcss
lib/uxon_tui/screens/: agents_unavailable.py  git_remotes.py  launch_options.py  main.py  settings.py
lib/uxon_tui/widgets/: session_table.py
src/uxon/: __init__.py  __main__.py  _demo.py  agents.py  audit.py  cli.py  dismissed.py  duration.py  git_backend_gh.py  git_backend_token.py  git_create.py  host_breaker.py  probes.py  remote_collector.py  remote_hosts.py  settings.py  sudo_probe.py  wire_schema.py  worktrees.py
src/uxon/tui/: __init__.py  app.py  config.py  context.py  events.py  hints.py  keymap.py  main_data.py  refresh.py  render_scheduler.py  slot_state.py  state.py  styles.tcss  tui_state.py
src/uxon/tui/dashboard/: __init__.py  buckets.py  columns.py  layout.py  model.py  reconcile.py  row.py  seen_users.py  ui_state.py
src/uxon/tui/screens/: __init__.py  agents_unavailable.py  confirm.py  existing.py  git_profile.py  git_remotes.py  launch_options.py  main.py  modal_base.py  new_project.py  session_choice.py  settings.py  worktree_branch.py
src/uxon/tui/widgets/: __init__.py  action_row.py  detected_banner.py  filter_input.py  fleet_status_bar.py  focus_releasing_data_table.py  host_status_bar.py  host_tab_strip.py  remote_session_table.py  search_bar.py  session_dashboard_table.py  session_table.py
tests/: conftest.py  helpers.py  test_ccw.py  test_ccw_agents.py  test_ccw_git_backend_gh.py  test_ccw_git_backend_token.py  test_ccw_git_create.py  test_ccw_git_profiles.py  test_ccw_settings.py  test_ccw_tui.py  test_ccw_tui_agents_unavailable.py  test_ccw_tui_bindings.py  test_ccw_tui_logging.py  test_ccw_tui_modals.py  test_ccw_tui_mouse.py  test_ccw_tui_screens.py  test_ccw_tui_widgets_textual.py  test_dashboard_block_colors.py  test_dashboard_buckets.py  test_dashboard_columns.py  test_dashboard_layout.py  test_dashboard_model.py  test_dashboard_model_order.py  test_dashboard_perf.py  test_dashboard_reconcile.py  test_dashboard_row.py  test_dashboard_seen_users.py  test_dashboard_ui_state.py  test_dashboard_widget.py  test_fetch_concurrency.py  test_fleet_status_bar.py  test_host_breaker.py  test_host_stats.py  test_host_tab_strip.py  test_main_screen_arrow_navigation.py  test_main_screen_dashboard_own.py  test_remote_collector.py  test_remote_hosts.py  test_remote_hosts_color.py  test_render_scheduler.py  (+44 more)
tests/harness/: pty_tui.py  textual_scenarios.py
tests/perf/: test_audit_overhead.py
