[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uxon"
dynamic = ["version"]
description = "Multi-user wrapper for managing terminal AI coding agent sessions (claude, codex, cursor)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vasily Zakharov", email = "vz@vz.team" }]
keywords = ["tmux", "claude", "codex", "cursor", "ai-agents", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Topic :: Terminals",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "textual>=0.80,<9",
    "tomlkit",
    "platformdirs>=4",
    "structlog>=24",
]

[project.urls]
Homepage = "https://github.com/vzd3v/uxon"
Issues   = "https://github.com/vzd3v/uxon/issues"
Source   = "https://github.com/vzd3v/uxon"
Changelog = "https://github.com/vzd3v/uxon/blob/main/CHANGELOG.md"

[project.scripts]
uxon = "uxon.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff",
    "pyright",
]

# ---------------------------------------------------------------------------
# Build backend configuration (hatchling)
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "src/uxon/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/uxon"]
# styles.tcss inside src/uxon/tui/ ships automatically — hatchling
# includes everything inside a package directory.

[tool.hatch.build.targets.sdist]
include = [
    "src/uxon",
    "tests",
    "install",
    "config/config.example.toml",
    "examples",
    "docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
]
exclude = [
    "docs/agents",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "docs/agents",
    "**/__pycache__",
]

[tool.ruff.lint]
# Conservative initial set; SIM/RET ratchet-up tracked as follow-up.
select = ["E", "F", "W", "I", "B", "UP"]
# E501 — long lines are allowed; the formatter handles wrapping.
# B008 — argparse default factories trigger this in CLI code.
# B007 — unused loop variable in tests is sometimes deliberate.
ignore = ["E501", "B008", "B007"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
# Tests use Textual via dynamic Pilot harness patterns that pyright cannot
# follow without aggressive ignores; keep them out of the type-check
# surface to preserve the "pyright clean" gate. The package source +
# the installer must stay clean.
include = ["src", "install"]
exclude = [
    "**/__pycache__",
    "docs/agents",
    "tests/harness/__pycache__",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# textual / tomlkit are now hard runtime deps but pyright still tolerates
# missing imports for stripped editor environments.
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:textual.*",
]
